Update tests to match new APIs