@@ -24,16 +24,21 @@ import android.database.Cursor;
 import android.database.DatabaseUtils;
 import android.database.sqlite.SQLiteException;
 import android.os.Parcel;
-import android.test.AndroidTestCase;
-import android.test.PerformanceTestCase;
-import android.test.suitebuilder.annotation.LargeTest;
-import android.test.suitebuilder.annotation.MediumTest;
-import android.test.suitebuilder.annotation.SmallTest;
-import android.test.suitebuilder.annotation.Suppress;
+import android.support.test.InstrumentationRegistry;
+import android.support.test.filters.LargeTest;
+import android.support.test.filters.MediumTest;
+import android.support.test.filters.SmallTest;
+import android.support.test.filters.Suppress;
+import android.support.test.runner.AndroidJUnit4;
 import android.util.Log;
 import android.util.Pair;
 
 import junit.framework.Assert;
+
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
+import org.junit.runner.RunWith;
 
 import java.io.File;
 import java.util.ArrayList;
@@ -44,8 +49,16 @@ import java.util.Locale;
 import io.requery.android.database.sqlite.SQLiteDatabase;
 import io.requery.android.database.sqlite.SQLiteStatement;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+
 @SuppressWarnings({"deprecated", "ResultOfMethodCallIgnored"})
-public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceTestCase {
+@RunWith(AndroidJUnit4.class)
+public class DatabaseGeneralTest {
     private static final String TAG = "DatabaseGeneralTest";
 
     private static final String sString1 = "this is a test";
@@ -57,10 +70,9 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     private SQLiteDatabase mDatabase;
     private File mDatabaseFile;
 
-    @Override
-    protected void setUp() throws Exception {
-        super.setUp();
-        File dbDir = getContext().getDir(this.getClass().getName(), Context.MODE_PRIVATE);
+    @Before
+    public void setUp() {
+        File dbDir = InstrumentationRegistry.getTargetContext().getDir(this.getClass().getName(), Context.MODE_PRIVATE);
         mDatabaseFile = new File(dbDir, "database_test.db");
         if (mDatabaseFile.exists()) {
             mDatabaseFile.delete();
@@ -70,20 +82,14 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
         mDatabase.setVersion(CURRENT_DATABASE_VERSION);
     }
 
-    @Override
-    protected void tearDown() throws Exception {
+    @After
+    public void tearDown() {
         mDatabase.close();
         mDatabaseFile.delete();
-        super.tearDown();
     }
 
     public boolean isPerformanceOnly() {
         return false;
-    }
-
-    // These test can only be run once.
-    public int startPerformance(Intermediates intermediates) {
-        return 1;
     }
 
     private void populateDefaultTable() {
@@ -95,6 +101,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
+    @Test
     public void testCustomFunction() {
         mDatabase.addCustomFunction("roundFunction", 1, new SQLiteDatabase.CustomFunction() {
             @Override
@@ -111,6 +118,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
+    @Test
     public void testNewFunction() {
         mDatabase.addFunction("roundFunction2", 1, new SQLiteDatabase.Function() {
             @Override
@@ -126,6 +134,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
+    @Test
     public void testCustomFunctionNoReturn() {
         mDatabase.addCustomFunction("emptyFunction", 1, new SQLiteDatabase.CustomFunction() {
             @Override
@@ -140,6 +149,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
+    @Test
     public void testNewFunctionNoReturn() {
         mDatabase.addFunction("emptyFunction2", 1, new SQLiteDatabase.Function() {
             @Override
@@ -153,14 +163,16 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
-    public void testVersion() throws Exception {
+    @Test
+    public void testVersion() {
         assertEquals(CURRENT_DATABASE_VERSION, mDatabase.getVersion());
         mDatabase.setVersion(11);
         assertEquals(11, mDatabase.getVersion());
     }
 
     @MediumTest
-    public void testUpdate() throws Exception {
+    @Test
+    public void testUpdate() {
         populateDefaultTable();
 
         ContentValues values = new ContentValues(1);
@@ -175,7 +187,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
-    public void testSupportUpdate() throws Exception {
+    @Test
+    public void testSupportUpdate() {
         populateDefaultTable();
 
         ContentValues values = new ContentValues(1);
@@ -191,7 +204,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
-    public void testSupportDelete() throws Exception {
+    @Test
+    public void testSupportDelete() {
         populateDefaultTable();
 
         assertEquals(1, mDatabase.delete("test", "_id=?", new Object[] { 1 }));
@@ -202,7 +216,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
 
     @Suppress // PHONE_NUMBERS_EQUAL not supported
     @MediumTest
-    public void testPhoneNumbersEqual() throws Exception {
+    @Test
+    public void testPhoneNumbersEqual() {
         mDatabase.execSQL("CREATE TABLE phones (num TEXT);");
         mDatabase.execSQL("INSERT INTO phones (num) VALUES ('911');");
         mDatabase.execSQL("INSERT INTO phones (num) VALUES ('5555');");
@@ -325,13 +340,12 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
         }
     }
 
-    private void assertPhoneNumberEqual(String phone1, String phone2) throws Exception {
+    private void assertPhoneNumberEqual(String phone1, String phone2) {
         assertPhoneNumberEqual(phone1, phone2, true);
         assertPhoneNumberEqual(phone1, phone2, false);
     }
     
-    private void assertPhoneNumberEqual(String phone1, String phone2, boolean useStrict)
-            throws Exception {
+    private void assertPhoneNumberEqual(String phone1, String phone2, boolean useStrict) {
         phoneNumberCompare(phone1, phone2, true, useStrict);
     }
 
@@ -352,6 +366,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
      */
     @Suppress // PHONE_NUMBERS_EQUAL not supported
     @SmallTest
+    @Test
     public void testPhoneNumbersEqualInternationl() throws Exception {
         assertPhoneNumberEqual("1", "1");
         assertPhoneNumberEqual("123123", "123123");
@@ -408,6 +423,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
+    @Test
     public void testCopyString() throws Exception {
         mDatabase.execSQL("CREATE TABLE guess (numi INTEGER, numf FLOAT, str TEXT);");
         mDatabase.execSQL(
@@ -448,7 +464,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
         
         c.moveToNext();
         c.copyStringToBuffer(numfIdx, buf);
-        assertEquals(-1.0, Double.valueOf(
+        assertEquals(new Double(-1.0), Double.valueOf(
             new String(buf.data, 0, buf.sizeCopied)));
         
         c.copyStringToBuffer(strIdx, buf);
@@ -460,6 +476,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
     
     @MediumTest
+    @Test
     public void testSchemaChange1() throws Exception {
         SQLiteDatabase db1 = mDatabase;
         Cursor cursor;
@@ -476,7 +493,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
-    public void testSchemaChange2() throws Exception {
+    @Test
+    public void testSchemaChange2() {
         mDatabase.execSQL("CREATE TABLE db1 (_id INTEGER PRIMARY KEY, data TEXT);");
         Cursor cursor = mDatabase.query("db1", null, null, null, null, null, null);
         assertNotNull(cursor);
@@ -485,7 +503,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
-    public void testSchemaChange3() throws Exception {
+    @Test
+    public void testSchemaChange3() {
         mDatabase.execSQL("CREATE TABLE db1 (_id INTEGER PRIMARY KEY, data TEXT);");
         mDatabase.execSQL("INSERT INTO db1 (data) VALUES ('test');");
         mDatabase.execSQL("ALTER TABLE db1 ADD COLUMN blah int;");
@@ -502,7 +521,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
-    public void testSelectionArgs() throws Exception {
+    @Test
+    public void testSelectionArgs() {
         mDatabase.execSQL("CREATE TABLE test (_id INTEGER PRIMARY KEY, data TEXT);");
         ContentValues values = new ContentValues(1);
         values.put("data", "don't forget to handled 's");
@@ -520,7 +540,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
 
     @Suppress // unicode collator not supported yet
     @MediumTest
-    public void testTokenize() throws Exception {
+    @Test
+    public void testTokenize() {
         Cursor c;
         mDatabase.execSQL("CREATE TABLE tokens (" +
                 "token TEXT COLLATE unicode," +
@@ -692,7 +713,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
     
     @MediumTest
-    public void testTransactions() throws Exception {
+    @Test
+    public void testTransactions() {
         mDatabase.execSQL("CREATE TABLE test (num INTEGER);");
         mDatabase.execSQL("INSERT INTO test (num) VALUES (0)");
 
@@ -795,7 +817,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
-    public void testContentValues() throws Exception {
+    @Test
+    public void testContentValues() {
         ContentValues values = new ContentValues();
         values.put("string", "value");
         assertEquals("value", values.getAsString("string"));
@@ -819,7 +842,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     public static final int TABLE_INFO_PRAGMA_DEFAULT_INDEX = 4;
 
     @MediumTest
-    public void testTableInfoPragma() throws Exception {
+    @Test
+    public void testTableInfoPragma() {
         mDatabase.execSQL("CREATE TABLE pragma_test (" +
                 "i INTEGER DEFAULT 1234, " +
                 "j INTEGER, " +
@@ -868,7 +892,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
-    public void testSemicolonsInStatements() throws Exception {
+    @Test
+    public void testSemicolonsInStatements() {
         mDatabase.execSQL("CREATE TABLE pragma_test (" +
                 "i INTEGER DEFAULT 1234, " +
                 "j INTEGER, " +
@@ -888,6 +913,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @MediumTest
+    @Test
     public void testUnionsWithBindArgs() {
         /* make sure unions with bindargs work http://b/issue?id=1061291 */
         mDatabase.execSQL("CREATE TABLE A (i int);");
@@ -921,7 +947,8 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
      */
     @Suppress
     @MediumTest
-    public void testCollateLocalizedForJapanese() throws Exception {
+    @Test
+    public void testCollateLocalizedForJapanese() {
         final String testName = "DatabaseGeneralTest#testCollateLocalizedForJapanese()";
         final Locale[] localeArray = Locale.getAvailableLocales();
         final String japanese = Locale.JAPANESE.getLanguage();
@@ -1004,6 +1031,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @SmallTest
+    @Test
     public void testSetMaxCacheSize() {
         mDatabase.execSQL("CREATE TABLE test (i int, j int);");
         mDatabase.execSQL("insert into test values(1,1);");
@@ -1020,6 +1048,7 @@ public class DatabaseGeneralTest extends AndroidTestCase implements PerformanceT
     }
 
     @LargeTest
+    @Test
     public void testDefaultDatabaseErrorHandler() {
         DefaultDatabaseErrorHandler errorHandler = new DefaultDatabaseErrorHandler();
 
